// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown MultiSelect 1`] = `
<div>
  <div>
    <div
      className="sc-bwzfXH emAExQ"
      width={30}
    >
      <div
        className="sc-bxivhb cfotMa"
      >
        <div
          className="target"
        >
          <button
            className="ms-choice"
            onClick={[Function]}
            type="button"
          >
            <span
              className=""
            >
              Select
            </span>
            <div
              className="icon icon-cheveron_close down"
            />
          </button>
          <div
            className="hide ms-drop bottom"
          >
            <div
              className="ms-search"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                onChange={[Function]}
                placeholder="Find"
                spellCheck="false"
                type="text"
                value=""
              />
              <span
                className="icon-search"
              />
            </div>
            <ul>
              <li
                className=""
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectAll"
                    onChange={[Function]}
                    type="checkbox"
                    value="all"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    Select All
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name1"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem0"
                    onChange={[Function]}
                    type="checkbox"
                    value="value1"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name1
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name2"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem1"
                    onChange={[Function]}
                    type="checkbox"
                    value="value2"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name2
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name3"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem2"
                    onChange={[Function]}
                    type="checkbox"
                    value="value3"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name3
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name4"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem3"
                    onChange={[Function]}
                    type="checkbox"
                    value="value4"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name4
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name5"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem4"
                    onChange={[Function]}
                    type="checkbox"
                    value="value5"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name5
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name6"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem5"
                    onChange={[Function]}
                    type="checkbox"
                    value="value6"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name6
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name7"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem6"
                    onChange={[Function]}
                    type="checkbox"
                    value="value7"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name7
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name8"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem7"
                    onChange={[Function]}
                    type="checkbox"
                    value="value8"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name8
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name9"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem8"
                    onChange={[Function]}
                    type="checkbox"
                    value="value9"
                  />
                  <span
                    className="icon-checkbox icon-checkbox_unselected_16px"
                  />
                  <span>
                    name9
                  </span>
                </label>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <pre>
      &lt;MultiSelect
        onBlur={[Function clicked]}
        options={
          Array [
            Object {
              "name": "name1",
              "value": "value1",
            },
            Object {
              "name": "name2",
              "value": "value2",
            },
            Object {
              "name": "name3",
              "value": "value3",
            },
            Object {
              "name": "name4",
              "value": "value4",
            },
            Object {
              "name": "name5",
              "value": "value5",
            },
            Object {
              "name": "name6",
              "value": "value6",
            },
            Object {
              "name": "name7",
              "value": "value7",
            },
            Object {
              "name": "name8",
              "value": "value8",
            },
            Object {
              "name": "name9",
              "value": "value9",
            },
          ]
        }
        width={30} /&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Dropdown Popover 1`] = `
<div>
  <div>
    <span
      className="sc-bdVaJa iPEyhN"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <span
        className="icon-download"
      />
      <ul>
        <li>
          <a
            href=""
          >
            test
          </a>
        </li>
      </ul>
    </span>
    <pre>
      &lt;Popover&gt;
        &lt;ul&gt;
          &lt;li&gt;
            &lt;a
              href=""&gt;
              test
            &lt;/a&gt;
          &lt;/li&gt;
        &lt;/ul&gt;
      &lt;/Popover&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Dropdown SingleSelect 1`] = `
<div>
  <div>
    <div
      className="sc-bwzfXH loaTiA"
      width={40}
    >
      <div
        className="sc-htpNat gYZUdE"
      >
        <div
          className="target"
        >
          <button
            className="ms-choice"
            onClick={[Function]}
            type="button"
          >
            <span
              className=""
            >
              Select
            </span>
            <div
              className="icon icon-cheveron_open "
            />
          </button>
          <div
            className="ms-drop bottom hide"
          >
            <div
              className="ms-search"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                onChange={[Function]}
                placeholder="Find"
                spellCheck="false"
                type="text"
              />
              <span
                className="icon-search"
              />
            </div>
            <ul>
              <li
                className=""
                title="name1"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value1"
                  />
                  <span>
                    name1
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name2"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value2"
                  />
                  <span>
                    name2
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name3"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value3"
                  />
                  <span>
                    name3
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name4"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value4"
                  />
                  <span>
                    name4
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name5"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value5"
                  />
                  <span>
                    name5
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name6"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value6"
                  />
                  <span>
                    name6
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name7"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value7"
                  />
                  <span>
                    name7
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name8"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value8"
                  />
                  <span>
                    name8
                  </span>
                </label>
              </li>
              <li
                className=""
                title="name9"
              >
                <label
                  className=""
                >
                  <input
                    checked={false}
                    name="selectItem"
                    onChange={[Function]}
                    type="radio"
                    value="value9"
                  />
                  <span>
                    name9
                  </span>
                </label>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <pre>
      &lt;SingleSelect
        onClick={[Function clicked]}
        options={
          Array [
            Object {
              "name": "name1",
              "value": "value1",
            },
            Object {
              "name": "name2",
              "value": "value2",
            },
            Object {
              "name": "name3",
              "value": "value3",
            },
            Object {
              "name": "name4",
              "value": "value4",
            },
            Object {
              "name": "name5",
              "value": "value5",
            },
            Object {
              "name": "name6",
              "value": "value6",
            },
            Object {
              "name": "name7",
              "value": "value7",
            },
            Object {
              "name": "name8",
              "value": "value8",
            },
            Object {
              "name": "name9",
              "value": "value9",
            },
          ]
        }
        width={40} /&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Form Badge 1`] = `
<div>
  <div>
    <span
      className="sc-bwzfXH cvsBdP"
    >
      <b>
        123
      </b>
    </span>
    <pre>
      &lt;Badge&gt;
        123
      &lt;/Badge&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Form Button 1`] = `
<div>
  <div>
    <button
      className="sc-bdVaJa dNYrPg"
      onClick={[Function]}
      size=""
      type="primary"
    >
      Click
    </button>
    <pre>
      &lt;Button
        onClick={[Function clicked]}
        size=""
        type="primary"&gt;
        Click
      &lt;/Button&gt;
    </pre>
  </div>
  <div>
    <button
      className="sc-bdVaJa ceTalc"
      onClick={[Function]}
      size="full-width"
      type="primary"
    >
      Click
    </button>
    <pre>
      &lt;Button
        onClick={[Function clicked]}
        size="full-width"
        type="primary"&gt;
        Click
      &lt;/Button&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Form Header 1`] = `
<div>
  <div>
    <div>
      <h1
        className="sc-bdVaJa cLVGOP"
        color="green"
      >
        <span
          className="logo-section bf-logo"
        >
          <a
            href="/"
            target="_blank"
          >
            <img
              alt="BirdEye"
              src="//d3cnqzq0ivprch.cloudfront.net/prod/css/images/logo_white.png"
              style={
                Object {
                  "maxHeight": 50,
                  "verticalAlign": "middle",
                }
              }
            />
          </a>
        </span>
        <span
          style={
            Object {
              "position": "relative",
              "top": 2,
            }
          }
        >
          IKEA
        </span>
      </h1>
      <div>
        <h1>
          content
        </h1>
      </div>
    </div>
    <pre>
      &lt;Header
        title="IKEA"&gt;
        &lt;h1&gt;
          content
        &lt;/h1&gt;
      &lt;/Header&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Form Table 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginTop": "50px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Form
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Table
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <table
        className="sc-bdVaJa bktDem"
        style={
          Object {
            "fontSize": 12,
            "fontWeight": 400,
            "lineHeight": "18px",
          }
        }
      >
        <thead>
          <tr>
            <th>
              Site Name
            </th>
            <th>
              Business Name
            </th>
            <th>
              Address
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Yahoo
            </td>
            <td>
              Not Found
            </td>
            <td
              className="error"
            >
              Business Not Found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginTop": "50px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
              ",
              "fontSize": "15px",
            }
          }
        >
          React Componont for Table
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Table
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  thead
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    tr
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      th
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Site Name
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      th
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      th
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Business Name
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      th
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      th
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Address
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      th
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    tr
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  thead
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  tbody
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    tr
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      td
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Yahoo
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      td
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      td
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Not Found
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      td
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      td
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          className
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              error
                              "
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 78,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Business Not Found
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 63,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      td
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    tr
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  tbody
                  &gt;
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                Table
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Table
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
